stub out mapbox integration

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ constraintlayout = "2.1.4"
 constraintlayout_compose = "1.0.1"
 lifecycle = "2.7.0"
 activity = "1.9.0"
+mapsCompose = "11.4.0-rc.1"
 media3 = "1.3.1"
 camera = "1.3.3"
 
@@ -34,6 +35,7 @@ coroutines = "1.8.1"
 accompanist = "0.34.0"
 
 # Test
+#ramaniMaplibre = "0.3.0"
 test_core = "1.5.0"
 
 #other
@@ -61,6 +63,7 @@ kover = "0.8.0"
 
 [libraries]
 # Project
+android = { module = "com.mapbox.maps:android", version.ref = "android" }
 android_gradle_plugin = { module = "com.android.tools.build:gradle", version.ref = "android_gradle_plugin" }
 # https://developer.android.com/studio/write/java8-support#library-desugaring-versions
 android_desugar = "com.android.tools:desugar_jdk_libs:2.0.4"
@@ -121,6 +124,8 @@ coroutines_test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", ve
 accompanist_permission = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
 
 # Libraries
+maps-compose = { module = "com.mapbox.extension:maps-compose", version.ref = "mapsCompose" }
+#ramani-maplibre = { module = "org.ramani-maps:ramani-maplibre", version.ref = "ramaniMaplibre" }
 squareup_seismic = "com.squareup:seismic:1.0.3"
 
 # network
