--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -190,12 +190,13 @@ maplibre_annotation = "org.maplibre.gl:android-plugin-annotation-v9:3.0.1"
 opusencoder = "io.element.android:opusencoder:1.1.0"
 kotlinpoet = "com.squareup:kotlinpoet:1.18.1"
 zxing_cpp = "io.github.zxing-cpp:android:2.2.0"
-
 # Analytics
 posthog = "com.posthog:posthog-android:3.8.2"
 sentry = "io.sentry:sentry-android:7.15.0"
 # main branch can be tested replacing the version with main-SNAPSHOT
 matrix_analytics_events = "com.github.matrix-org:matrix-analytics-events:0.25.0"
+
+smartreply = 'com.google.mlkit:smart-reply:17.0.3'
 
 # Emojibase
 matrix_emojibase_bindings = "io.element.android:emojibase-bindings:1.3.3"
