--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -189,6 +189,9 @@ opusencoder = "io.element.android:opusencoder:1.1.0"
 kotlinpoet = "com.squareup:kotlinpoet:1.18.1"
 zxing_cpp = "io.github.zxing-cpp:android:2.2.0"
 
+ramaniMaplibre = "org.ramani-maps:ramani-maplibre:0.6.1"
+playServicesLocation = "com.google.android.gms:play-services-location:21.3.0"
+
 # Analytics
 posthog = "com.posthog:posthog-android:3.8.2"
 sentry = "io.sentry:sentry-android:7.15.0"
